# ethernet_mac_rhino

./: cdc.cdc  eth_mac_test_rhino_top.sch  ethernet_mac_test.sym  ethernet_mac_test.ucf  ethernet_mac_test.vhd  ethernet_mac_test.xise  ethernet_mac_test_tb.vhd
ipcore_dir/: clk_wiz_v3_6.xco
pc/: CMakeLists.txt
